Will not work on the Play HD menu.

The cover art notifications will work on the following menus.
Play SD menu.
Play HD menu. only play/pause will work.

Added error messages to the --title argument if you run it on the play hd menu.

Removed the cover art notifications from:
Play Bookmark menu
Play YTMusic menu
No need for it, as the cover art is only the Channel/playlist/albums.

v2.6
Big fixes with the --next and --prev it was skipping forward and backwards twice.
Added thumbnails to the desktop notifications. Only works on Play SD menu and the Linux version.

v2.5
Fixed an issue with saving favorites when playing music/video.
Fixed issue with the argument --title
Changed the quit commands on Main menu back to q/Q
Changed quit question back to y/Y
I was thinking that might be too many letters to press and quit accidentally.

v2.4
A number of changes in this version.
Updated the code that downloads audio and video in real time also save bookmark.

Quit Main menu commands:
q/Q/x/exit/quit
Quit question commands:
y/Y/x/exit/quit

Added a new command line argument
Desktop and terminal
notifications get
artist and title        --title

FF, RR and Play/Pause will now show in the terminal and desktop notifications. Uses notify-send, if notify-send is not found yt-playlist will default back to terminal notifications only.

Updated the --help

v2.3
There a typo. quit? (y/N)? Changed to Quit? [y/N] I know it's a little thing but it was bugging me.

v2.2
I am always pressing q when I want to press 1 for the Play SD menu. So I have added a yes or no question when you press q to quit.

v2.1
Check internet status is now in the debug menu. Type debug at the main menu to access it. Renamed Billboard charts to Billboard charts menu.

v2.0
Major update. Added a new menu to the Main Menu, Billboard charts menu. Removed Billboard Hot 100 from the YTMusic menu.

v1.54